Changed: No longer use the info image as a placeholder for the ep summary tooltip. No need to waste space for an image and padding, now we use the airdate or ep field where applicable. Reordered the coming episode list view to be more logical as the most important columns should be first rather in the middle of the table. Tweaked the css for the class that wraps around the tv show name in various places so that it now stands out a bit more against recent changes.

--- a/data/css/default.css
+++ b/data/css/default.css
@@ -3,6 +3,7 @@
 img { border: 0; vertical-align: middle;}
 
 body {
+text-rendering: optimizeLegibility;
 background-color:#F5F1E4;
 color:#000;
 font-family:'Verdana', 'Helvetica', 'Sans-serif', 'sans';
@@ -148,9 +149,7 @@ clear:left;
 
 .plotInfo {
 cursor:help;
-margin-left: 8px;
-position: relative;
-float: right;
+font-weight: 700;
 }
 
 #tooltip {
@@ -334,6 +333,7 @@ div#addShowPortal  button .buttontext { position: relative; display: block; padd
 
 td.tvShow { font-weight: bold; }
 
+td.tvShow a {text-decoration: none; font-size: 1.2em; }
 td.tvShow:hover { background-color: #cfcfcf !important; cursor: pointer; }
 .navShow { display: inline; cursor: pointer; vertical-align: top; }
 
